--- a/humza.html
+++ b/humza.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Humza</title>
 </head>
 <body>
-    
+    <main>
+        <img src="images/dolce.jpg" alt="Dolce & Gabbana">
+        <img src="images/kendall.jpg" alt="Kendall Jenner">
+        <img src="images/margiela.webp" alt="Maison Margiela">
+        <img src="images/mcm.jpg" alt="MCM">
+        <img src="images/rickowens.jpg" alt="Rick Owens">
+        <img src="images/shaun.jpg" alt="Shaun Ross">
+        <img src="images/la_fleur.jpg" alt="La Fleur">
+    </main>
 </body>
 </html>
