--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li><a href = "/humza.html">Humza Arshad</a></li>
-                <li>Student Two Name Here (as a link)</li>
+                <li>Student One: <a href = ""> HUMZA </a></li>
+                <li>Student Two: <a href="" > RICKY </a>(as a link)</li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
@@ -24,14 +24,14 @@
     </header>
     
     <main>
-        <h2> Our Topic</h2>
-        <img src = "yourPicHere" width="200" alt = "Image of your Topic here.">
+        <h2> Fashion </h2>
+        <img src = "images/fashion_funny.jpeg" width="200" alt = "Funny Fashion Model">
 
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
-            <li></li>
-            <li></li>
-            <li></li>
+            <li> Default option </li>
+            <li> Funny content </li>
+            <li> Applicable to everyone </li>
         </ul>
     </main>
     
