--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         <nav>
             <ul>
                 <li><a href = "index.html">Home</a></li>
-                <li>Student One: <a href = ""> HUMZA </a></li>
-                <li>Student Two: <a href="" > RICKY </a>(as a link)</li>
+                <li><a href = "/humza.html">HUMZA</a></li>
+                <li><a href="/ricky.html" >RICKY</a></li>
             </ul>
         </nav>
         <h1>Week Two discussion</h1>
@@ -29,9 +29,9 @@
 
         <h3>Top Three Reasons We picked Our Topic</h3>
         <ul>
-            <li> Default option </li>
+            <li> Fantastic default option </li>
+            <li> Expressive & Inspiring </li>
             <li> Funny content </li>
-            <li> Applicable to everyone </li>
         </ul>
     </main>
     
