--- a/humza.html
+++ b/humza.html
@@ -7,14 +7,15 @@
     <title>Humza</title>
 </head>
 <body>
+    <h1>HUMZA</h1>
     <main>
-        <img src="images/dolce.jpg" alt="Dolce & Gabbana">
-        <img src="images/kendall.jpg" alt="Kendall Jenner">
-        <img src="images/margiela.webp" alt="Maison Margiela">
-        <img src="images/mcm.jpg" alt="MCM">
-        <img src="images/rickowens.jpg" alt="Rick Owens">
-        <img src="images/shaun.jpg" alt="Shaun Ross">
-        <img src="images/la_fleur.jpg" alt="La Fleur">
+        <img src="images/dolce.jpg" width="200" alt="Dolce & Gabbana">
+        <img src="images/kendall.jpg" width="200" alt="Kendall Jenner">
+        <img src="images/margiela.webp" width="200" alt="Maison Margiela">
+        <img src="images/mcm.jpg" width="200" alt="MCM">
+        <img src="images/rickowens.jpg" width="200" alt="Rick Owens">
+        <img src="images/shaun.jpg" width="200" alt="Shaun Ross">
+        <img src="images/la_fleur.jpg" width="200" alt="La Fleur">
     </main>
 </body>
 </html>
